codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__model_reasoning_selection_popup.snap
---
source: tui/src/chatwidget/tests/popups_and_settings.rs
assertion_line: 2764
expression: popup
---
    ╭──────────────────────────────────────────────────────────────────────╮
    │                                                                      │
    │  Select Reasoning Level for gpt-5.4                                  │
    │  1. Low               Fast responses with lighter reasoning          │
    │  2. Medium (default)  Balances speed and reasoning depth for         │
    │                       everyday tasks                                 │
    │  3. max               Maximum available reasoning                    │
    │› 4. High *            Greater reasoning depth for complex problems   │
    │  5. Extra high        Extra high reasoning depth for complex         │
    │                       problems                                       │
    │                                                                      │
    │  Press enter to confirm or esc to go back                            │
    ╰──────────────────────────────────────────────────────────────────────╯
